@@ -1,15 +1,0 @@
-package galyleo.shell.magic;
-
-import lombok.NoArgsConstructor;
-
-import static lombok.AccessLevel.PROTECTED;
-
-/**
- * {@link AbstractMagic} base class.
- *
- * @author {@link.uri mailto:ball@hcf.dev Allen D. Ball}
- * @version $Revision$
- */
-@NoArgsConstructor(access = PROTECTED)
-public abstract class AbstractMagic implements AnnotatedMagic {
-}
